# Projects

./: .gitignore  Pipfile  README.md  pyproject.toml
Classes/: README.md
Classic Algorithms/: README.md  sieve_of_eratosthenes.py  сollatz_сonjecture.py
Data Structures/: README.md
Databases/: README.md
Files/: README.md
Graph/: README.md
Graphics and Multimedia/: README.md
Networking/: README.md  country_from_IP_lookup.py
Numbers/: README.md  cost_of_tile.py  credit_card_validator.py  fast_exponentiation.py  fibonacci_sequence.py  happy_numbers.py
Security/: README.md
Text/: README.md
Threading/: README.md
Web/: README.md
